@@ -2,128 +2,8 @@ from collections import defaultdict
 
 MISSING = object()
 
-def path_iterator(data):
-    """path_iterator(data) -> iterator
-
-    Return a ``iterator`` which iterates over all the paths
-    which in the data dict.
-
-        >>> data = dict(foo=dict(bar=42, baz=10), buz="hello")
-
-        >>> from repoze.formapi.marshalling import path_iterator
-        >>> sorted(list(path_iterator(data)))
-        ['buz', 'foo.bar', 'foo.baz']
-
-    """
-
-    for key, value in data.items():
-        if type(value) == dict:
-            for p in path_iterator(value):
-                yield "%s.%s" % (key, p)
-        elif isinstance(value, (tuple, list)):
-            if len(value) != 1:
-                raise TypeError(
-                    "Sequence types must contain exactly one simple type.")
-            if value[0] not in (int, str, unicode, float):
-                raise TypeError(
-                    "Sequence must contain a simple type.")
-            yield key
-        else:
-            yield key
-            
-def resolve_name(name, data):
-    """resolve the name given in the data given
-
-    Resolve a name in a dict::
-
-        >>> from repoze.formapi.marshalling import resolve_name
-        >>> data = dict(foo=dict(bar=42, baz=10), buz="hello")
-        >>> resolve_name("buz", data)
-        'hello'
-        >>> resolve_name("foo.bar", data)
-        42
-        >>> resolve_name("foo.baz", data)
-        10
-        >>> resolve_name("foo", data)
-        {'baz': 10, 'bar': 42}
-
-    A KeyError is raised for nonexisting keys::
-
-        >>> resolve_name("foo.notthere", data)
-        Traceback (most recent call last):
-        ...
-        KeyError: 'notthere'
-
-    """
-
-    path = name.split(".")
-
-    obj = data
-    for item in path:
-        obj = obj[item]
-
-    return obj
-
-def store_item(name, value, data):
-    """Set items in a dict using a ``path``
-
-    Using ``store_item`` we're able to set values using a ``path``::
-
-        >>> from repoze.formapi.marshalling import store_item
-        >>> data = dict()
-        >>> store_item("user.name", "Fred Kaputnik", data)
-        >>> store_item("user.nick", "fred", data)
-        >>> store_item("user.age", 42, data)
-        >>> data
-        {'user': {'nick': 'fred', 'age': 42, 'name': 'Fred Kaputnik'}}
-
-    Note that ``empty`` path elements are created using new ``dict``
-    objects.
-
-    If a value exists, it is overwritten::
-
-        >>> store_item("user.name", "Alfred E. Neuman", data)
-        >>> data
-        {'user': {'nick': 'fred', 'age': 42, 'name': 'Alfred E. Neuman'}}
-
-    """
-    path = name.split(".")
-    path, key = path[:-1], path[-1]
-
-    obj = data
-    if len(path):
-        for item in path:
-            obj = obj.setdefault(item, defaultdict(lambda: None))
-
-    old_value = obj.get(key)
-    if type(old_value) == list:
-        obj[key].append(value)
-    elif type(old_value) == tuple:
-        obj[key] += (value,)
-    elif value is not MISSING:
-        obj[key] = value
-        
-def convert_int(name, value):
-    try:
-        return int(value), None
-    except ValueError:
-        return None, "Error converting value to integer"
-
-def convert_float(name, value):
-    try:
-        return int(value), None
-    except ValueError:
-        return None, "Error converting value to float"
-
-type_converters = {
-        unicode:    lambda name, value: (value, None),
-        str:        lambda name, value: (value, None),
-        int:        convert_int,
-        float:      convert_float,
-}
-
-def convert(params, fields):
-    """convert(params, fields) -> data, errors
+def marshall(params, fields):
+    """marshall(params, fields) -> data, errors
 
     This function converts and validates the ``params`` tuple of
     (name, value) pairs.  The data converted is returned in the
@@ -152,46 +32,39 @@ def convert(params, fields):
 
     Note that the keys of the parameter tuples are dotted paths.
 
-        >>> from repoze.formapi.marshalling import convert
-        >>> data, errors = convert(params, fields)
+        >>> from repoze.formapi.marshalling import marshall
+        >>> data, errors = marshall(params, fields)
 
     Since all the tuples in ``params`` are valid, we expect no
     validation errors::
 
         >>> errors
-        {'user': {'nick': None, 'age': None, 'name': None}}
-
-    We can use the ``resolve_name`` function to traverse into the
-    errors dictionary.
-    
-        >>> from repoze.formapi.marshalling import resolve_name
-        >>> resolve_name("user.nick", errors) is None
-        True
+        {}
 
     To get to the marshalled field data, we use a similar approach.
 
-        >>> resolve_name("user.name", data)
+        >>> data['user']['name']
         'Fred Kaputnik'
-        >>> resolve_name("user.nick", data)
+        >>> data['user']['nick']
         'fred'
-        >>> resolve_name("user.age", data)
+        >>> data['user']['age']
         42
 
     To illustrate error handling, we can violate the validation
     constraint of the ``age`` field.
 
-        >>> data, errors = convert((("user.age", "ten"),), fields)
+        >>> data, errors = marshall((("user.age", "ten"),), fields)
         
-        >>> resolve_name("user.age", data) is None
+        >>> data['user']['age'] is None
         True
         
-        >>> resolve_name("user.age", errors)
-        'Error converting value to integer'
+        >>> errors['user']['age']
+        "invalid literal for int() with base 10: 'ten'"
 
     Note that the ``data`` and ``errors`` dictionaries provide a
     default value of ``None`` for missing entries.
 
-        >>> data, errors = convert((), fields)
+        >>> data, errors = marshall((), fields)
 
         >>> 'age' in data['user']
         False
@@ -213,22 +86,25 @@ def convert(params, fields):
         ...     ("user.friends", "stefan"),
         ...     ("user.friends", "malthe"))
         
-        >>> data, errors = convert(params, fields)
-
+        >>> data, errors = marshall(params, fields)
+        
     As expected, we get a list. Note that this list items appear in
     the order they appear in the reqeuest parameters.
     
-        >>> resolve_name("user.friends", data)
+        >>> data['user']['friends']
         ['stefan', 'malthe']
 
     Tuples are also supported.
 
-        >>> fields = {"points": (int,)}
+        >>> fields = {
+        ...     "points": (int,)
+        ...     }
         
         >>> params = (("points", 42), ("points", 10))
-        >>> data, errors = convert(params, fields)
         
-        >>> resolve_name("points", data)
+        >>> data, errors = marshall(params, fields)
+        
+        >>> data['points']
         (42, 10)
 
     Sequence types may only appear as end-points. The following field
@@ -240,79 +116,281 @@ def convert(params, fields):
         ...         "nick": str}]
         ...     }
 
-        >>> convert((), fields)
+        >>> params = (("users.name", "Foo"),)
+        >>> marshall(params, fields)
         Traceback (most recent call last):
          ...
-        TypeError: Sequence must contain a simple type.
+        TypeError: Sequences are only allowed as end-points.
 
+    Dictionary entries may be dynamic.
+
+        >>> fields = {
+        ...     "user": {
+        ...         str: {
+        ...            "name": str,
+        ...         }
+        ...     }
+        ... }
+
+        >>> params = (
+        ...     ("user.stefan.name", "Stefan Eletzhofer"),
+        ...     ("user.malthe.name", "Malthe Borch"))
+        
+        >>> data, errors = marshall(params, fields)
+        
+    As expected, we get a list. Note that this list items appear in
+    the order they appear in the reqeuest parameters.
+    
+        >>> data['user']['stefan']['name']
+        'Stefan Eletzhofer'
+    
     """
         
-    data = dict()
-    errors = Errors()
+    data = Marshaller(fields)
+    errors = Marshaller(fields, coerce=False)
 
-    # initialize data and errors dict
-    for path in path_iterator(fields):
-        data_type = resolve_name(path, fields)
-        if type(data_type) == list:
-            store_item(path, list(), data)
-            store_item(path, list(), errors)
-        elif type(data_type) == tuple:
-            store_item(path, tuple(), data)
-            store_item(path, tuple(), errors)
-        else:
-            store_item(path, MISSING, data)
-            store_item(path, MISSING, errors)
-
-    for param in params:
-        name, value = param
-
-        # fetch the data type
-        data_type = resolve_name(name, fields)
-
-        if type(data_type) in (list, tuple):
-            # these merely specify the container type.  Fetch the data type
-            data_type = data_type[0]
-            
-        # fetch type converter
-        converter = type_converters.get(data_type)
-        if not callable(converter):
-            raise RuntimeError("No converter for type %s found, needed for param named '%s'" % (data_type, name))
-
-        # convert
-        value, error = converter(name, value)
-
-        # store value in data dict
-        store_item(name, value, data)
-
-        # store error in error dict
-        store_item(name, error, errors)
-
+    for name, value in params:
+        path = tuple(name.split('.'))
+        try:
+            data[path] = value
+            errors[path] = None
+        except ValueError, error:
+            data[path] = None
+            errors[path] = error.message
+                
     return data, errors
 
-class Errors(dict):
-    """Form error dictionary.
+class Marshaller(object):
+    """Form fields marshaller.
 
-    This is a ``dict``-like object which evaluates to ``True`` if
-    a key contains a non-None value.
+    Any field name that comforms to the field definition may be
+    resolved; if not set, an empty value is returned.
 
-        >>> from repoze.formapi.marshalling import Errors
-        >>> errors = Errors()
+        >>> from repoze.formapi.marshalling import Marshaller
+        
+        >>> marshaller = Marshaller({
+        ...     'name': str,
+        ...     'users': {
+        ...         str: {
+        ...            'username': str,
+        ...            'id': int,
+        ...            'groups': [str]}
+        ...         }
+        ...     })
 
-        >>> errors["foo"] = dict(bar=42, fuz=12)
-        >>> bool(errors)
+    We'll first demonstrate that valid keys return an empty value.
+    
+        >>> marshaller['name'] is None
+        True
+        
+        >>> marshaller['users', 'foo', 'username'] is None
+        True
+        
+        >>> marshaller['users', 'foo', 'groups']
+        []
+
+    An exception is raised if an invalid key is tried.
+    
+        >>> marshaller['users', 'foo', 'bar']
+        Traceback (most recent call last):
+         ...
+        KeyError: 'bar'
+
+    The truth-value of an empty ``Marshaller`` instance is ``False``.
+
+        >>> bool(marshaller)
+        False
+
+    We may set values for valid keys.
+
+        >>> marshaller['name'] = 'Foo'
+        >>> marshaller['users', 'foo', 'id'] = 1
+        >>> marshaller['users', 'foo', 'username'] = 'foo'
+
+    Sequences append on assignments.
+        
+        >>> marshaller['users', 'foo', 'groups'] = 'foo'
+        >>> marshaller['users', 'foo', 'groups'] = 'bar'
+
+    As expected, we can retrieve the values in exchange for the keys.
+        
+        >>> marshaller['name']
+        'Foo'
+        
+        >>> marshaller['users', 'foo', 'username']
+        'foo'
+
+        >>> marshaller['users', 'foo', 'id']
+        1
+
+        >>> marshaller['users', 'foo', 'groups']
+        ['foo', 'bar']
+
+    Sequences are replaced, if assigned a sequence.
+
+        >>> marshaller['users', 'foo', 'groups'] = ['bar']
+        >>> marshaller['users', 'foo', 'groups']
+        ['bar']    
+
+    Again, an exception is raised if an invalid key is tried.
+    
+        >>> marshaller['users', 'foo', 'bar'] = 'baz'
+        Traceback (most recent call last):
+         ...
+        KeyError: 'bar'
+
+    Values are attempted coerced to the field type.
+    
+        >>> marshaller['users', 'foo', 'id'] = '1'
+        >>> marshaller['users', 'foo', 'id']
+        1
+
+    Coercing must not fail.
+
+        >>> marshaller['users', 'foo', 'id'] = 'one'
+        Traceback (most recent call last):
+         ...
+        ValueError: ...
+
+    We may always assign ``None``.
+
+        >>> marshaller['users', 'foo', 'id'] = None
+        
+    The truth-value of a non-empty ``Marshaller`` instance is ``True``.
+
+        >>> bool(marshaller)
         True
 
+    If the path is not exhausted, a new marshaller instance is
+    returned, which curries the path onto new requests.
 
-        >>> errors["foo"] = dict(bar=None, fuz=None)
-        >>> bool(errors)
-        False
-    """
+        >>> marshaller['users']['foo']['username']
+        'foo'
         
+    """
+
+    def __init__(self, fields, data=None, path=(), coerce=True):
+        self.fields = fields
+
+        if data is None:
+            data = {}
+
+        self.data = data
+        self.path = path
+        self.coerce = coerce
+        
+    def __getitem__(self, path):
+        if not isinstance(path, tuple):
+            path = (path,)
+        path = self.path + tuple(path)
+        value = self.data.get(path, MISSING)
+        if value is not MISSING:
+            return value        
+
+        # verify path; we want to raise an exception if the path does
+        # not comply with the field definition
+        data_type = self.traverse(path)
+
+        if isinstance(data_type, list):
+            return []
+        
+        if isinstance(data_type, tuple):
+            return ()
+
+        if isinstance(data_type, dict):
+            return Marshaller(self.fields, self.data, path, self.coerce)
+            
+    def __setitem__(self, path, value):
+        if not isinstance(path, tuple):
+            path = (path,)        
+        key = self.path + tuple(path)
+        
+        # verify path; we want to raise an exception if the path does
+        # not comply with the field definition
+        data_type = self.traverse(path)
+
+        if isinstance(data_type, (tuple, list)):
+            if isinstance(value, (tuple, list)):
+                if key in self.data:
+                    del self.data[key]
+            else:
+                value = (value,)
+
+            for v in value:
+                if v is not None and self.coerce and not isinstance(v, data_type[0]):
+                    v = data_type[0](v)
+
+                if isinstance(data_type, list):
+                    self.data.setdefault(
+                        key, []).append(v)
+                else:
+                    if key in self.data:
+                        self.data[key] += (v,)
+                    else:
+                        self.data[key] = (v,)
+        else:
+            if value is not None and self.coerce and not isinstance(value, data_type):
+                value = data_type(value)
+            self.data[key] = value
+
+        if value is not None:
+            self.data[None] = True
+            
     def __nonzero__(self):
-        for path in path_iterator(self):
-            if resolve_name(path, self) is not None:
-                return True
-        return False
+        return self.data.get(None, False)
+
+    def __repr__(self):
+        data = self.marshall()
+        return repr(data)
+
+    def __iter__(self):
+        for path in self.data:
+            if path is not None and tuple(
+                path[:len(self.path)]) == self.path:
+                yield path[len(self.path)]
+
+    def items(self):
+        items = []
+        for key in self:
+            items.append((key, self[key]))
+        return items
+                
+    def marshall(self):
+        _data = {}
+        for path, value in self.data.items():
+            if path is None:
+                continue
+            
+            data = _data
+            for key in path[:1]:
+                if key in data:
+                    data = data[key]
+                else:
+                    data = data[key] = defaultdict(lambda: None)
+            data[key] = value
+        return _data
+        
+    def traverse(self, path):
+        path = list(path)
+        fields = self.fields
+        while path:
+            if not isinstance(fields, dict):
+                raise TypeError(
+                    "Sequences are only allowed as end-points.")
+                
+            value = path.pop(0)
+            if len(fields) == 1:
+                key = fields.keys()[0]
+                if key in (str, unicode, int):
+                    # make sure value conforms to data type
+                    if not isinstance(value, key):
+                        raise ValueError(
+                            "Must be type '%s' (got '%s')." % (
+                            (key.__name__, type(value).__name__)))
+                fields = fields[key]
+                continue
+            fields = fields[value]
+        return fields
 
 class defaultdict(defaultdict):
     __doc__ = defaultdict.__doc__
